2013-09-01 Philipp Klaus Krause <pkk AT spth.de>

	* src/stm8/gen.c:
	  Fix loading of upper parts of large values through frame pointer, bug #2209.

2013-08-30 Philipp Klaus Krause <pkk AT spth.de>

	* src/stm8/gen.c:
	  Slightly more efficient addition and loading through frame pointer.

2013-08-30 Maarten Brock <sourceforge.brock AT dse.nl>

	* support/regression/tests/bug-2205.c: new, added
	* support/regression/tests/*: set svn properties eol and keywords
	* device/lib/clean.mk: add stm8 port to cleaning

2013-08-30 Philipp Klaus Krause <pkk AT spth.de>

	* src/z80/ralloc2.cc,
	  support/regression/tests/bug-2208.c:
	  Fix bug #2208.

2013-08-29 Philipp Klaus Krause <pkk AT spth.de>

	* src/SDCCpeeph.c,
	  src/ds390/peeph.def,
	  src/hc08/peeph.def,
	  src/mcs51/peeph.def,
	  src/stm8/peeph.def,
	  src/z80/peeph-gbz80.def,
	  src/z80/peeph-r2k.def,
	  src/z80/peeph-z80.def:
	  Simplified peephole rules.

2013-08-29 Philipp Klaus Krause <pkk AT spth.de>

	* src/stm8/peeph.def:
	  Rules for bit setting.
	* src/stm8/peep.c:
	  Implement more of register use check.
	* src/stm8/gen.c:
	  Fix byte skipping in subtraction.

2013-08-28 Philipp Klaus Krause <pkk AT spth.de>

	* src/stm8/gen.c:
	  Fix generation of temporary labels in dry runs, more efficient shift by literal, subtraction and addition, partially fix recognition of multibyte on-stack operands.
	* src/stm8/peeph.def:
	  Eliminate unreachable jumps (which can be generated by other rules).
	* src/stm8/ralloc2.cc:
	  Tune register allocation heuristic.

2013-08-27 Philipp Klaus Krause <pkk AT spth.de>

	* src/stm8/gen.c:
	  Fix handling of A in float negation and equality comparison, more flexible addition and subtraction.
	* support/regression/tests/float_single.c:
	  Enable tests for asinf(), atanf(), cosf(), sinf(), sinhf().

2013-08-25 Raphael Neider <rneider AT web.de>

	* device/include/pic16/pic16devices.txt:
	  add flag indicating XINST availability per device
	* src/pic16/device.c: